[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/AnimationPlayer_Manager.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Shotgun.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0, 1, 0.27451, 1 )

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )

[sub_resource type="Animation" id=10]
tracks/0/type = "method"
tracks/0/path = NodePath("AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="CapsuleShape" id=11]
radius = 0.75
height = 0.28

[sub_resource type="CapsuleMesh" id=12]
radius = 0.75
mid_height = 1.25

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.909804, 0, 0, 1 )

[sub_resource type="RayShape" id=6]

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )
jump_power = 50000

[node name="Head" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 0.109127, 0, 0, 0, 0.109127, 0, 0, 0, 0.109127, 0, 0.644321, 0 )
current = true
fov = 80.0
far = 5000.0

[node name="RayCast" type="RayCast" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 4.36, 0, 0, 0, 2.538, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="MeshInstance" type="MeshInstance" parent="Head/Camera/RayCast"]
transform = Transform( 2.459, 0, 0, 0, 2.872, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 9 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head"]
anims/PlayerAnimation = SubResource( 10 )
script = ExtResource( 1 )

[node name="PlayerCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 11 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.00163244, 0.00189941, -0.0049744 )
mesh = SubResource( 12 )
material/0 = SubResource( 7 )

[node name="Weapon" type="Node" parent="."]
script = ExtResource( 3 )
fire_rate = 1

[node name="CrouchTween" type="Tween" parent="."]

[node name="RayCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1.425, 0, 1, -2.32162e-07, 0, 0, 0 )
shape = SubResource( 6 )

[node name="LegRaycast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, -11.497, 0 )
